fixed alignment of AlertImage to center

--- a/Alert/Alert.module.less
+++ b/Alert/Alert.module.less
@@ -43,7 +43,7 @@
 
 	&.overlay {
 		.alertImage {
-			align-self: baseline;
+			align-self: center;
 		}
 
 		.buttonContainer {
